--- a/frontend/styles/tokens/spacing.css
+++ b/frontend/styles/tokens/spacing.css
@@ -3,6 +3,7 @@
   --app-header-height: 39px;
   --cluster-tabs-height: 0px;
   --app-content-top: calc(var(--app-header-height) + var(--cluster-tabs-height));
+  --gridtable-filter-bar-height: 40px;
 
   /* Spacing scale */
   --spacing-xs: 0.25rem;
